test/scc/pp/errors/044.a
044.t:1:10: error: extra tokens at end of #ifdef directive